--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
+    "mysql2": "^2.3.0",
     "nodemon": "^2.0.12",
+    "sequelize": "^6.6.5",
+    "sequelize-cli": "^6.2.0",
     "socket.io": "^2.3.0"
   }
 }
